[package]
name = "repoact-notify"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.6.5"
env_logger = "*"
log = "*"
tokio = "1.0"
ring = "0.16"
jsonwebtoken = "8.1"
time = { version = "0.3", features = ["std"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_secretsmanager = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.48.0", default-features = false, features = ["rustls"] }
