[package]
name = "repoact-notify"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2021"

[dependencies]
lambda_runtime = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rand = "0.6.5"
tokio = "1.0"
ring = "0.16"
jsonwebtoken = "8.1"
time = { version = "0.3", features = ["std"] }
repoact-notify-common = { path = "./common" }
futures = "0.3.27"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "registry",
    "fmt",
    "json",
] }
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.34.0"
aws-sdk-secretsmanager = "1.35.0"
thiserror = "1.0.61"
