[package]
name = "repoact-notify-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "json"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.137", features = ["derive"] }
