[package]
name = "repoact-notify-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.34.0"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.61"
