[package]
name = "repoact-notify-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
thiserror.workspace = true
