[package]
name = "configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
lambda_runtime = "0.5.1"
log = "0.4.17"
ring = "0.16.20"
rusoto_core = { version = "0.48.0", features = ["rustls"], default-features = false }
rusoto_dynamodb = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_secretsmanager = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
