[package]
name = "configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
lambda_runtime = "0.5.1"
log = "0.4.17"
ring = "0.16.20"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
repoact-notify-common = { path = "../common" }
structopt = "0.3.26"
nom = "7.1.1"
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.34.0"
aws-sdk-secretsmanager = "1.35.0"
