[package]
name = "configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
futures-util = "0.3.21"
lambda_runtime = "0.5.1"
ring = "0.16.20"
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
repoact-notify-common = { path = "../common" }
nom = "7.1.1"
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-secretsmanager.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "registry",
    "fmt",
    "json",
] }
thiserror.workspace = true
